--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "express": "^4.17.1",
-    "mongodb": "^3.5.5"
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
