--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3'
 services:
   mongo:
       ports:
-      - "27017:27017"
+      - "27018:27018"
       volumes:
       - ./data:/data/db
       image: mongo
   web:
     build: .
+    env_file:
+    - .env
     ports:
-    - "3000:3000"
+    - "3001:3001"
     depends_on:
     - mongo 
