--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "publication_ms",
   "version": "1.0.0",
-  "description": "",
+  "description": "CRUD with Node",
   "main": "index.js",
   "scripts": {
     "build": "babel src --out-dir dist",
@@ -9,10 +9,11 @@
     "start": "node dist/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "macorreag@unal.edu.co",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.9"
